<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/botonAceite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aceite" />

                <Button
                    android:id="@+id/botonAcelga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/acelga" />

                <Button
                    android:id="@+id/botonArroz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arroz" />

                <Button
                    android:id="@+id/botonAzucar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/azucar" />

                <Button
                    android:id="@+id/botonCacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cacao" />

                <Button
                    android:id="@+id/botonCalabaza"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calabaza" />

                <Button
                    android:id="@+id/botonCerdo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cerdo" />

                <Button
                    android:id="@+id/botonVaca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vaca" />

                <Button
                    android:id="@+id/botonCerveza"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cerveza" />

                <Button
                    android:id="@+id/botonHamburguesa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hamburguesa" />

                <Button
                    android:id="@+id/botonLeche"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/leche" />

                <Button
                    android:id="@+id/botonPan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pan" />

                <Button
                    android:id="@+id/botonPastas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pastas" />

                <Button
                    android:id="@+id/botonPizza"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pizza" />

                <Button
                    android:id="@+id/botonPapas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/papas" />

                <Button
                    android:id="@+id/botonTomate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tomate" />

                <Button
                    android:id="@+id/botonUvas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uvas" />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>